use java11 Map.of